// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should match snapshot logged in 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    signOut={[Function]}
    user={
        Object {
            "id": 1,
            "name": "Bob",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          replace={false}
          to="/"
>
          <h1>
                    Movie Tracker
          </h1>
</Link>,
        <Link
          replace={false}
          to="favorites"
>
          favorites
</Link>,
        <nav>
          <p>
                    Welcome back 
                    Bob
          </p>
          <button
                    className="sign-out"
                    onClick={[Function]}
          >
                    Sign Out
          </button>
</nav>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <h1>
            Movie Tracker
</h1>,
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Movie Tracker",
          },
          "ref": null,
          "rendered": "Movie Tracker",
          "type": "h1",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "favorites",
          "replace": false,
          "to": "favorites",
        },
        "ref": null,
        "rendered": "favorites",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <p>
              Welcome back 
              Bob
</p>,
            false,
            <button
              className="sign-out"
              onClick={[Function]}
>
              Sign Out
</button>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                "Welcome back ",
                "Bob",
              ],
            },
            "ref": null,
            "rendered": Array [
              "Welcome back ",
              "Bob",
            ],
            "type": "p",
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Sign Out",
              "className": "sign-out",
              "onClick": [Function],
            },
            "ref": null,
            "rendered": "Sign Out",
            "type": "button",
          },
        ],
        "type": "nav",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            replace={false}
            to="/"
>
            <h1>
                        Movie Tracker
            </h1>
</Link>,
          <Link
            replace={false}
            to="favorites"
>
            favorites
</Link>,
          <nav>
            <p>
                        Welcome back 
                        Bob
            </p>
            <button
                        className="sign-out"
                        onClick={[Function]}
            >
                        Sign Out
            </button>
</nav>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <h1>
              Movie Tracker
</h1>,
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Movie Tracker",
            },
            "ref": null,
            "rendered": "Movie Tracker",
            "type": "h1",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "favorites",
            "replace": false,
            "to": "favorites",
          },
          "ref": null,
          "rendered": "favorites",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <p>
                Welcome back 
                Bob
</p>,
              false,
              <button
                className="sign-out"
                onClick={[Function]}
>
                Sign Out
</button>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Welcome back ",
                  "Bob",
                ],
              },
              "ref": null,
              "rendered": Array [
                "Welcome back ",
                "Bob",
              ],
              "type": "p",
            },
            false,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Sign Out",
                "className": "sign-out",
                "onClick": [Function],
              },
              "ref": null,
              "rendered": "Sign Out",
              "type": "button",
            },
          ],
          "type": "nav",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;

exports[`Header should match when logged out 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Unknown
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Link
          replace={false}
          to="/"
>
          <h1>
                    Movie Tracker
          </h1>
</Link>,
        <Link
          replace={false}
          to="favorites"
>
          favorites
</Link>,
        <nav>
          <div>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              exact={true}
                              to="/login"
                    >
                              Sign In
                    </NavLink>
                    <NavLink
                              activeClassName="active"
                              aria-current="page"
                              exact={true}
                              to="/sign-up"
                    >
                              Sign Up
                    </NavLink>
          </div>
</nav>,
      ],
      "className": "header",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": <h1>
            Movie Tracker
</h1>,
          "replace": false,
          "to": "/",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Movie Tracker",
          },
          "ref": null,
          "rendered": "Movie Tracker",
          "type": "h1",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": "favorites",
          "replace": false,
          "to": "favorites",
        },
        "ref": null,
        "rendered": "favorites",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            undefined,
            undefined,
            <div>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            exact={true}
                            to="/login"
              >
                            Sign In
              </NavLink>
              <NavLink
                            activeClassName="active"
                            aria-current="page"
                            exact={true}
                            to="/sign-up"
              >
                            Sign Up
              </NavLink>
</div>,
          ],
        },
        "ref": null,
        "rendered": Array [
          undefined,
          undefined,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  exact={true}
                  to="/login"
>
                  Sign In
</NavLink>,
                <NavLink
                  activeClassName="active"
                  aria-current="page"
                  exact={true}
                  to="/sign-up"
>
                  Sign Up
</NavLink>,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "Sign In",
                  "exact": true,
                  "to": "/login",
                },
                "ref": null,
                "rendered": "Sign In",
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "activeClassName": "active",
                  "aria-current": "page",
                  "children": "Sign Up",
                  "exact": true,
                  "to": "/sign-up",
                },
                "ref": null,
                "rendered": "Sign Up",
                "type": [Function],
              },
            ],
            "type": "div",
          },
        ],
        "type": "nav",
      },
    ],
    "type": "header",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Link
            replace={false}
            to="/"
>
            <h1>
                        Movie Tracker
            </h1>
</Link>,
          <Link
            replace={false}
            to="favorites"
>
            favorites
</Link>,
          <nav>
            <div>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    exact={true}
                                    to="/login"
                        >
                                    Sign In
                        </NavLink>
                        <NavLink
                                    activeClassName="active"
                                    aria-current="page"
                                    exact={true}
                                    to="/sign-up"
                        >
                                    Sign Up
                        </NavLink>
            </div>
</nav>,
        ],
        "className": "header",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": <h1>
              Movie Tracker
</h1>,
            "replace": false,
            "to": "/",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Movie Tracker",
            },
            "ref": null,
            "rendered": "Movie Tracker",
            "type": "h1",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "favorites",
            "replace": false,
            "to": "favorites",
          },
          "ref": null,
          "rendered": "favorites",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              undefined,
              undefined,
              <div>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                exact={true}
                                to="/login"
                >
                                Sign In
                </NavLink>
                <NavLink
                                activeClassName="active"
                                aria-current="page"
                                exact={true}
                                to="/sign-up"
                >
                                Sign Up
                </NavLink>
</div>,
            ],
          },
          "ref": null,
          "rendered": Array [
            undefined,
            undefined,
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <NavLink
                    activeClassName="active"
                    aria-current="page"
                    exact={true}
                    to="/login"
>
                    Sign In
</NavLink>,
                  <NavLink
                    activeClassName="active"
                    aria-current="page"
                    exact={true}
                    to="/sign-up"
>
                    Sign Up
</NavLink>,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "activeClassName": "active",
                    "aria-current": "page",
                    "children": "Sign In",
                    "exact": true,
                    "to": "/login",
                  },
                  "ref": null,
                  "rendered": "Sign In",
                  "type": [Function],
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "activeClassName": "active",
                    "aria-current": "page",
                    "children": "Sign Up",
                    "exact": true,
                    "to": "/sign-up",
                  },
                  "ref": null,
                  "rendered": "Sign Up",
                  "type": [Function],
                },
              ],
              "type": "div",
            },
          ],
          "type": "nav",
        },
      ],
      "type": "header",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
    "disableLifecycleMethods": true,
  },
}
`;
